Network_policies/Policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: development
spec:
  podSelector:
    matchLabels:
      env: dev
  ingress: []


---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dev-allow-from-testing
  namespace: development
spec:
  podSelector:
    matchLabels:
      env: dev
  ingress:
    - from:
       - podSelector:
           matchLabels:
            env: testing
       - namespaceSelector:
            matchLabels:
               env: testing
      ports:
       - protocol: TCP
         port: 8000
       - protocol: TCP
         port: 8888


---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dev-allow-from-default
  namespace: development
spec:
  podSelector:
    matchLabels:
      env: dev
  ingress:
    - from:
       - namespaceSelector:
            matchLabels:
               env: default
